# hackaton_llm

./: .dockerignore  .env.example  Dockerfile  Dockerfile.base  Makefile  api.py  config.py  crud.py  db.py  handler.py  llm.yaml  main.py  message.py  pyproject.toml  spamcore.py
scripts/: download_model.py
