[project]
name = "hackaton-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.6.0",
    "deep-translator>=1.11.4",
    "quixstreams>=3.16.0",
    "scikit-learn>=1.7.0",
    "sqlmodel>=0.0.24",
    "torch==2.6",
    "transformers[torch]>=4.52.4",
]
